[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "distributionally-robust-learning"   # distribution name: can have hyphens
version = "0.1.0"
description = ""
authors = ["You <you@example.com>"]

# Tell Poetry which *Python package directory* to ship:
packages = [
  { include = "learning" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
